--- a/build.gradle
+++ b/build.gradle
@@ -21,5 +21,8 @@ repositories {
 }
 
 dependencies {
+    compile 'org.hibernate:hibernate-core:4.3.6.Final'
+    compile 'org.hibernate:hibernate-entitymanager:4.3.6.Final'
+    compile 'org.postgresql:postgresql:9.3-1102-jdbc4'
     testCompile 'junit:junit:4.11'
 }
