--- a/build.gradle
+++ b/build.gradle
@@ -26,5 +26,7 @@ dependencies {
     compile 'org.postgresql:postgresql:9.3-1102-jdbc4'
     compile 'com.google.inject:guice:3.0'
     compile 'com.google.guava:guava:18.0'
+    compile 'org.glassfish.jersey.containers:jersey-container-jetty-servlet:2.13'
+    compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.13'
     testCompile 'junit:junit:4.11'
 }
