--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,6 @@ dependencies {
     compile 'com.google.inject:guice:3.0'
     compile 'com.google.guava:guava:18.0'
     compile 'org.glassfish.jersey.containers:jersey-container-jetty-servlet:2.13'
-    compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.13'
+    compile 'com.google.code.gson:gson:2.3'
     testCompile 'junit:junit:4.11'
 }
