Adding gradle wrapper, procfile

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
 apply plugin: 'java'
+apply plugin: 'application'
 
 version = '1.0'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+mainClassName = 'net.foodmanager.Main'
 
 //create a single Jar with all dependencies
 task fatJar(type: Jar) {
@@ -14,6 +16,10 @@ task fatJar(type: Jar) {
     baseName = project.name + '-all'
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.0'
 }
 
 repositories {
