--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 mainClassName = 'net.foodmanager.Main'
 
-//create a single Jar with all dependencies
+// Create a single Jar with all dependencies
 task fatJar(type: Jar) {
     manifest {
         attributes 'Implementation-Title': 'FoodManager',
@@ -16,6 +16,11 @@ task fatJar(type: Jar) {
     baseName = project.name + '-all'
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
+}
+
+tasks.withType(JavaExec) {
+    // Needed to pass system properties through
+    systemProperties System.getProperties()
 }
 
 task wrapper(type: Wrapper) {
