--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "foodmanager",
   "dependencies": {
     "ember": "~2.9.0",
-    "ember-cli-shims": "0.1.3"
+    "ember-cli-shims": "0.1.3",
+    "jquery-ui": "1.10.2"
   }
 }
